# gesture-recognition

./: .gitignore  README.md  pyproject.toml
dev/: data_analysis.ipynb
gesture_recognition/: dataset.py  model.py  training.py  training_utils.py
scripts/: train.py
